--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile ratpack.dependency("jackson")
 
     compile "org.mongodb:driver-async:3.0.0-SNAPSHOT"
+    compile "com.commercehub.jackson:jackson-datatype-mongo:1.1.0"
 
     // Default SLF4J binding.  Note that this is a blocking implementation.
     // See here for a non blocking appender http://logging.apache.org/log4j/2.x/manual/async.html
