Update CircleCI config

--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,11 @@
 machine:
   java:
     version: oraclejdk8
+
+dependencies:
+  override:
+    - ./gradlew dependencies
+
+test:
+  override:
+    - ./gradlew check
